# Nexus

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.web  README.md  docker-compose.production.yml  docker-compose.yml  docs-docker.md  pyproject.toml  sophie.py  tela.py
.github/workflows/: test.yml
docker/: backend-entrypoint.sh  docker-entrypoint.sh  nginx.conf
docker/backend/: entrypoint.sh
docker/frontend/: nginx.conf
docs/: api.md  secretary-discord-workflow.html
docs/deployment/: docker-ubuntu.md
examples/: enhanced_tela_demo.py  github_collaboration_demo.py  sophie_demo.py  sophie_react_demo.py
new_web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
new_web/src/: App.tsx  index.css
scripts/: deploy-production.sh
src/: logger.py
src/agents/: __init__.py
src/channels/: __init__.py
src/exception/: __init__.py  execution_event.py  tool.py
src/extensions/: __init__.py
src/gateways/: __init__.py
src/mcps/: __init__.py  client.py  session_manager.py  web_fetch.py
src/sandbox/: __init__.py  docker_sandbox.py  pool_management.py
src/server/: assistant_poller.py  background_services.py  config.py  github_feedback.py  pollers.py  product_discovery.py  product_workflow.py  runner.py  schemas.py
src/tools/: code_analysis.py  dependencies.py  discord.py  product.py  (+5 more)
tests/: conftest.py  test_api_docs.py  test_docker_deployment.py
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+384 files in other folders)
