[project]
name = "nexus"
version = "0.1.0-beta"
description = "Coding automatically as a team in an enterprise level"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "docker>=7.0.0",
    "duckduckgo-search>=8.0.0",
    "fastapi>=0.116.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "mcp-server-fetch>=0.1.0",
    "mwin>=0.2.2",
    "openai>=2.29.0",
    "python-dotenv>=1.1.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits real network and MCP server (deselect with '-m not integration')",
]
